--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GCLooo | Futuristic Portfolio</title>
+    <title>Lissa Assenga | Futuristic Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -26,16 +26,16 @@
           extend: {
             colors: {
               primary: {
-                50: "#f0f9ff",
-                100: "#e0f2fe",
-                200: "#bae6fd",
-                300: "#7dd3fc",
-                400: "#38bdf8",
-                500: "#0ea5e9",
-                600: "#0284c7",
-                700: "#0369a1",
-                800: "#075985",
-                900: "#0c4a6e",
+                50: "#fff0fb",
+                100: "#ffe6f7",
+                200: "#ffc2eb",
+                300: "#ff99dd",
+                400: "#ff66cc",
+                500: "#ff33bb",
+                600: "#e6008c",
+                700: "#b3006d",
+                800: "#80004e",
+                900: "#4d002f",
               },
               dark: {
                 900: "#0a0a0a",
@@ -45,9 +45,9 @@
                 500: "#4a4a4a",
               },
               neon: {
-                blue: "#00f0ff",
-                purple: "#b300ff",
-                pink: "#ff00b3",
+                pink: "#ff33bb",
+                purple: "#cc66ff",
+                blue: "#66ccff",
               },
             },
             animation: {
@@ -153,10 +153,10 @@
         width: 100%;
         height: 100%;
         background-image: linear-gradient(
-            rgba(56, 189, 248, 0.1) 1px,
+            rgba(255, 51, 187, 0.1) 1px,
             transparent 1px
           ),
-          linear-gradient(90deg, rgba(56, 189, 248, 0.1) 1px, transparent 1px);
+          linear-gradient(90deg, rgba(255, 51, 187, 0.1) 1px, transparent 1px);
         background-size: 40px 40px;
         animation: grid-pulse 10s ease infinite;
         perspective: 1000px;
@@ -171,18 +171,18 @@
         width: 100%;
         height: 100%;
         background-image: radial-gradient(
-          rgba(56, 189, 248, 0.2) 1px,
+          rgba(255, 51, 187, 0.2) 1px,
           transparent 1px
         );
         background-size: 20px 20px;
       }
 
       .glow-effect {
-        box-shadow: 0 0 15px rgba(56, 189, 248, 0.5);
+        box-shadow: 0 0 15px rgba(255, 51, 187, 0.5);
       }
 
       .glow-effect-hover:hover {
-        box-shadow: 0 0 20px rgba(56, 189, 248, 0.7);
+        box-shadow: 0 0 20px rgba(255, 51, 187, 0.7);
       }
 
       .card-gradient {
@@ -195,7 +195,7 @@
       }
 
       .text-gradient {
-        background: linear-gradient(90deg, #38bdf8 0%, #b300ff 100%);
+        background: linear-gradient(90deg, #ff33bb 0%, #cc66ff 100%);
         -webkit-background-clip: text;
         background-clip: text;
         color: transparent;
@@ -204,11 +204,11 @@
       .text-shimmer {
         background: linear-gradient(
           90deg,
-          #38bdf8 0%,
-          #b300ff 25%,
-          #ff00b3 50%,
-          #b300ff 75%,
-          #38bdf8 100%
+          #ff33bb 0%,
+          #cc66ff 25%,
+          #66ccff 50%,
+          #cc66ff 75%,
+          #ff33bb 100%
         );
         background-size: 200% auto;
         -webkit-background-clip: text;
@@ -221,14 +221,14 @@
         border: 1px solid transparent;
         background: linear-gradient(rgba(10, 10, 10, 1), rgba(10, 10, 10, 1))
             padding-box,
-          linear-gradient(135deg, #38bdf8, #b300ff) border-box;
+          linear-gradient(135deg, #ff33bb, #cc66ff) border-box;
       }
 
       .border-gradient-hover:hover {
         border: 1px solid transparent;
         background: linear-gradient(rgba(26, 26, 26, 1), rgba(26, 26, 26, 1))
             padding-box,
-          linear-gradient(135deg, #38bdf8, #b300ff) border-box;
+          linear-gradient(135deg, #ff33bb, #cc66ff) border-box;
       }
 
       .grid-overlay {
@@ -264,7 +264,7 @@
       .shape-1 {
         width: 300px;
         height: 300px;
-        background: #00f0ff;
+        background: #ff33bb;
         top: 10%;
         left: 5%;
         animation: float 15s ease infinite;
@@ -273,7 +273,7 @@
       .shape-2 {
         width: 400px;
         height: 400px;
-        background: #b300ff;
+        background: #cc66ff;
         bottom: 10%;
         right: 5%;
         animation: float-reverse 12s ease infinite;
@@ -282,7 +282,7 @@
       .shape-3 {
         width: 200px;
         height: 200px;
-        background: #ff00b3;
+        background: #66ccff;
         top: 50%;
         right: 15%;
         animation: float 10s ease infinite 2s;
@@ -300,7 +300,7 @@
 
       .link-card:hover .link-icon {
         transform: translateX(5px);
-        color: #38bdf8;
+        color: #ff33bb;
       }
 
       .project-card {
@@ -310,7 +310,7 @@
 
       .project-card:hover {
         transform: translateY(-10px) rotateX(5deg) rotateY(-5deg) scale(1.02);
-        box-shadow: 0 25px 50px -12px rgba(0, 240, 255, 0.25);
+        box-shadow: 0 25px 50px -12px rgba(255, 51, 187, 0.25);
       }
 
       .project-card::before {
@@ -320,7 +320,7 @@
         left: 0;
         right: 0;
         height: 5px;
-        background: linear-gradient(90deg, #38bdf8, #b300ff);
+        background: linear-gradient(90deg, #ff33bb, #cc66ff);
         border-radius: 5px 5px 0 0;
         opacity: 0;
         transition: opacity 0.3s ease;
@@ -332,30 +332,30 @@
 
       .input-field {
         background: rgba(26, 26, 26, 0.8);
-        border: 1px solid rgba(56, 189, 248, 0.2);
+        border: 1px solid rgba(255, 51, 187, 0.2);
         transition: all 0.3s ease;
       }
 
       .input-field:focus {
-        border-color: rgba(56, 189, 248, 0.5);
-        box-shadow: 0 0 0 3px rgba(56, 189, 248, 0.1);
+        border-color: rgba(255, 51, 187, 0.5);
+        box-shadow: 0 0 0 3px rgba(255, 51, 187, 0.1);
         background: rgba(26, 26, 26, 1);
       }
 
       .skill-pill {
         background: linear-gradient(
           135deg,
-          rgba(56, 189, 248, 0.1) 0%,
+          rgba(255, 51, 187, 0.1) 0%,
           rgba(10, 10, 10, 0.3) 100%
         );
-        border: 1px solid rgba(56, 189, 248, 0.2);
+        border: 1px solid rgba(255, 51, 187, 0.2);
         transition: all 0.3s ease;
       }
 
       .skill-pill:hover {
         transform: translateY(-2px);
-        box-shadow: 0 4px 8px rgba(56, 189, 248, 0.2);
-        border-color: rgba(56, 189, 248, 0.5);
+        box-shadow: 0 4px 8px rgba(255, 51, 187, 0.2);
+        border-color: rgba(255, 51, 187, 0.5);
       }
 
       .hologram-effect {
@@ -372,7 +372,7 @@
         height: 100%;
         background: linear-gradient(
           transparent 0%,
-          rgba(0, 240, 255, 0.1) 50%,
+          rgba(255, 51, 187, 0.1) 50%,
           transparent 100%
         );
         animation: scan 7s linear infinite;
@@ -382,7 +382,7 @@
       .cyber-button {
         position: relative;
         overflow: hidden;
-        border: 1px solid #38bdf8;
+        border: 1px solid #ff33bb;
         background: rgba(10, 10, 10, 0.7);
         transition: all 0.3s ease;
       }
@@ -397,7 +397,7 @@
         background: linear-gradient(
           90deg,
           transparent,
-          rgba(56, 189, 248, 0.4),
+          rgba(255, 51, 187, 0.4),
           transparent
         );
         transition: all 0.6s ease;
@@ -408,7 +408,7 @@
       }
 
       .cyber-button:hover {
-        box-shadow: 0 0 15px rgba(56, 189, 248, 0.7);
+        box-shadow: 0 0 15px rgba(255, 51, 187, 0.7);
       }
 
       .nav-link {
@@ -423,7 +423,7 @@
         left: 0;
         width: 100%;
         height: 2px;
-        background: linear-gradient(90deg, #38bdf8, #b300ff);
+        background: linear-gradient(90deg, #ff33bb, #cc66ff);
         transform: translateX(-100%);
         transition: transform 0.3s ease;
       }
@@ -437,14 +437,14 @@
         border: 2px solid transparent;
         background: linear-gradient(rgba(10, 10, 10, 1), rgba(10, 10, 10, 1))
             padding-box,
-          linear-gradient(135deg, #38bdf8, #b300ff) border-box;
+          linear-gradient(135deg, #ff33bb, #cc66ff) border-box;
       }
 
       .profile-img::before {
         content: "";
         position: absolute;
         inset: -5px;
-        background: linear-gradient(135deg, #38bdf8, #b300ff);
+        background: linear-gradient(135deg, #ff33bb, #cc66ff);
         border-radius: 50%;
         z-index: -1;
         filter: blur(15px);
@@ -453,7 +453,7 @@
 
       .typewriter {
         overflow: hidden;
-        border-right: 2px solid #38bdf8;
+        border-right: 2px solid #ff33bb;
         white-space: nowrap;
         animation: typing 3.5s steps(40, end),
           blink-caret 0.75s step-end infinite;
@@ -474,7 +474,7 @@
           border-color: transparent;
         }
         50% {
-          border-color: #38bdf8;
+          border-color: #ff33bb;
         }
       }
 
@@ -536,7 +536,7 @@
           <div class="relative">
             <img
               src="https://raw.githubusercontent.com/gcl140/gcl140.github.io/main/images/profile.jpg"
-              alt="Profile"
+              alt="Lissa Assenga"
               class="w-32 h-32 rounded-full profile-img glow-effect"
             />
           </div>
@@ -544,7 +544,7 @@
         <h1
           class="text-4xl md:text-5xl font-bold mb-2 font-futuristic text-shimmer"
         >
-          GCL140
+          Lissa Assenga
         </h1>
         <h2
           class="text-xl md:text-2xl text-primary-300 mb-4 font-futuristic typewriter"
@@ -1428,8 +1428,8 @@
             >
           </div>
         </div>
-        <p>© 2025 GCL140. All rights reserved.</p>
-        <p class="mt-2">Art by GCL.</p>
+        <p>© 2025 Lissa Assenga. All rights reserved.</p>
+        <p class="mt-2">Art by Lissa.</p>
       </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
@@ -1440,7 +1440,7 @@
         particlesJS("particles-js", {
           particles: {
             number: { value: 80, density: { enable: true, value_area: 800 } },
-            color: { value: "#38bdf8" },
+            color: { value: "#ff33bb" },
             shape: {
               type: "circle",
               stroke: { width: 0, color: "#000000" },
@@ -1459,7 +1459,7 @@
             line_linked: {
               enable: true,
               distance: 150,
-              color: "#38bdf8",
+              color: "#ff33bb",
               opacity: 0.4,
               width: 1,
             },
@@ -1498,7 +1498,7 @@
             event.preventDefault();
 
             const formData = {
-              to_name: "GCL140",
+              to_name: "Lissa Assenga",
               from_name: document.querySelector('[name="name"]').value,
               from_email: document.querySelector('[name="email"]').value,
               reply_to: document.querySelector('[name="email"]').value,
