--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lissa Assenga | Futuristic Portfolio</title>
+    <title>Lissa Assenga</title> 
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -552,7 +552,7 @@
           FULL-STACK WEB DEVELOPER
         </h2>
         <p class="text-gray-400 max-w-2xl mx-auto">
-          I build websites that don't just work — they feel right. From the
+          I like to build websites that don't just work — they feel right. From the
           buttons you click to the data behind the scenes, I combine creativity
           and code to turn ideas into smooth, real-world web solutions. Every
           project is a chance to learn, innovate, and make something people
