--- a/index.html
+++ b/index.html
@@ -558,17 +558,18 @@
           project is a chance to learn, innovate, and make something people
           truly enjoy using.
         </p>
+        
 
         <div class="flex space-x-4 mt-6">
           <a
-            href="https://github.com/gcl140"
+            href="https://github.com/leelium111" 
             target="_blank"
             class="w-10 h-10 rounded-full bg-dark-700 flex items-center justify-center border border-dark-600 hover:bg-primary-900 hover:border-primary-500 transition-all duration-300 glow-effect-hover cyber-button"
           >
             <i class="fab fa-github text-lg"></i>
           </a>
           <a
-            href="https://www.linkedin.com/in/gift-christian-b70a8a317/"
+            href="https://www.linkedin.com/in/lissa-william-25152a314/"
             target="_blank"
             class="w-10 h-10 rounded-full bg-dark-700 flex items-center justify-center border border-dark-600 hover:bg-blue-900 hover:border-blue-500 transition-all duration-300 glow-effect-hover cyber-button"
           >
