--- a/index.html
+++ b/index.html
@@ -617,7 +617,11 @@
             </form>
           </div>
         </div>
+      <script type="text/javascript" src="https://cdn.jsdeliver.net/npm/@email.js/browser@3/dist/email.min.js"></script>
+      <script src="mail.js"></script>
+      
       </section>
+      
 
       <!-- Footer -->
       <footer class="border-t border-gray-800 pt-8 pb-6 text-center text-gray-500 text-sm">
